<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextstartdots"
        android:layout_width="29dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextstartdots"
        android:textAlignment="textEnd"

        tools:text="@string/dots" />

    <EditText
        android:id="@+id/editTextbefore"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"

        android:inputType="textPersonName"
        android:text="@string/editTextbefore" />

    <EditText
        android:id="@+id/editTextkey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextkey" />

    <EditText
        android:id="@+id/editTextafter"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextafter" />

    <EditText
        android:id="@+id/editTextenddots"
        android:layout_width="29dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/editTextenddots"
        tools:text="@string/dots" />

</LinearLayout>